[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Cells/cell_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/gravity_cell.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Requests/gravity_requests.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 193.457

[node name="gravity_cell" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="gravity_request" parent="cell_requests" index="0" instance=ExtResource( 3 )]

[node name="gravity_area" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="gravity_area" index="0"]
shape = SubResource( 1 )

[connection signal="body_entered" from="gravity_area" to="." method="_on_gravity_area_body_entered"]
[connection signal="body_exited" from="gravity_area" to="." method="_on_gravity_area_body_exited"]
